concord_macros/tests/dsl/fail/fail_cache_capacity_missing_entries.rs
use concord_macros::api;

api! {
    client CacheCapacityMissingEntriesApi {
        base "https://example.com"

        cache bad {
            capacity 10
        }
    }

    GET Ping
    path ["ping"]
    -> Text<String>
}

fn main() {}
